[package]
name = "predictify-hybrid"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
linked_list_allocator = "0.10"


[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
